# Hnefatafl

./: .gitignore  README.md  app.py  models.py  pyproject.toml  requirements.txt  txt.txt
instance/: database.db
migrations/versions/: 15e29fe0c07c_initial_migration.py  4965f6d8dc90_initial_migration.py  5b32609e6ec5_initial_migration.py
static/css/: auth.css  main_menu.css  profile.css  styles.css
static/js/: game.js  socket.js  storage.js  utils.js
template/: auth.html  board.html  board_bot.html  main_menu.html  profile.html
