[tool.poetry]
name = "hnefatafl"
version = "0.1.0"
description = "an ancient Scandinavian board game, various variations of which were played throughout medieval Europe before the invention of chess."
authors = ["Samangelof"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-socketio = "^5.11.2"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
alembic = "^1.13.1"
flask-bcrypt = "^1.0.1"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
